style/homepage.css
body {
    background-color: black;
    color: white;
    font-family: Arial, sans-serif;
}

/* ------------------- */
header {
    background-color: rgb(29, 27, 27);
    font-size: 15px;
    padding: 10px;
    width: calc(100% + 20px);
    top: 0;
    position: relative;
    margin-top: -10px;
    margin-left: -20px;
}

/* ------------------- */
/* Change the background colors of the switch and ball */
.switch {
    position: absolute;
    top: 50%;
    left: 20px; 
    transform: translateY(-50%);
    width: 40px;
    height: 20px;
}
.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: black; 
    transition: .4s;
    border-radius: 10px;
}
.slider:before {
    position: absolute;
    content: "";
    height: 16px;
    width: 16px;
    left: 2px;
    bottom: 2px;
    background-color: white;
    transition: .4s;
    border-radius: 50%;
}
input:checked + .slider:before {
    transform: translateX(20px);
}
.slider.checked:before {
    background-color: white;
}
.slider:not(.checked):before {
    background-color: black; 
}


/* ------------------- */
/* fade text to image */
.contact {
    position: fixed;
    display: inline-block;
}
.contact_text {
    position: absolute;
    top: 0;
    left: 0;
    margin-top: 10px;
    margin-left: 10px; 
    opacity: 1;
    transition: opacity .2s ease .1s;
    z-index: 1;
}
.contact_img {
    width: 40px;
    height: auto;
    margin-left: 10px;
    opacity: 0;
    transition: opacity .2s ease .1s;
}
.contact:hover .contact_text {
    opacity: 0;
}
.contact:hover .contact_img {
    opacity: 1;
}

/* ------------------- */
.projects {
    position: relative;
    display: inline-block;
}
.projects_text {
    position: absolute;
    margin-top: 10px;
    top: 0;
    left: 0;
    opacity: 1;
    transition: opacity .2s ease .1s;
    z-index: 1;
}
.projects_img {
    width: 35px;
    height: auto;
    margin-left: 10px;
    opacity: 0;
    transition: opacity .2s ease .1s;
}
.projects:hover .projects_text {
    opacity: 0;
}
.projects:hover .projects_img {
    opacity: 1;
}

/* ------------------- */
.about {
    position: relative;
    display: inline-block;
}
.about_text {
    position: absolute;
    margin-top: 10px;
    top: 0;
    left: 0;
    opacity: 1;
    transition: opacity .2s ease .1s;
    z-index: 1;
}
.about_img {
    position: center;
    width: 35px;
    height: auto;
    top: 0;
    left: 0;
    opacity: 0;
    transition: opacity .2s ease .1s;
}
.about:hover .about_text {
    opacity: 0;
}
.about:hover .about_img {
    opacity: 1;
}

/* ------------------- */
.home {
    position: relative;
    display: inline-block;
}
.home_text {
    position: absolute;
    margin-top: 10px;
    top: 0;
    left: 0;
    opacity: 1;
    transition: opacity .2s ease .1s;
    z-index: 1;
}
.home_img {
    position: center;
    width: 35px;
    height: auto;
    top: 0;
    left: 0;
    opacity: 0;
    transition: opacity .2s ease .1s;
}
.home:hover .home_text {
    opacity: 0;
}
.home:hover .home_img {
    opacity: 1;
}

/* ------------------- */
nav {
    text-align: center;
}
nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
nav ul li {
    display: inline;
    margin-right: 20px;
}
nav ul li a {
    text-decoration: none;
    color: white;
    transition: color 0.3s;
}
nav ul li a:hover {
    color: gray;
}

/* ------------------- */
.container {
    text-align: center;
    max-width: 1200px;
    margin: 0 auto;
    animation: fadeInText 7s ease forwards;
    opacity: 0;
    display: flex;
}
@keyframes fadeInText {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}
.content {
    display: flex;
    align-items: center; 
}
.hello {
    color: white;
    font-weight: 800;
    margin-top: 100px;
}
.name {
    color: white;
}
.me_image {
    width: 20%;
    margin-top: 100px;
    height: auto; 
    margin-right: 20px; 
}

/* ------------------- */
footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    background-color: rgb(29, 27, 27);
    color: white;
    text-align: center;
    padding: 5px;
    font-size: 14px;
}

